Responsive button alignment fixed

--- a/inc/customizer/custom-controls/responsive-spacing/responsive-spacing.scss
+++ b/inc/customizer/custom-controls/responsive-spacing/responsive-spacing.scss
@@ -37,6 +37,7 @@
 				width: 15px;
 				height: 15px;
 				font-size: 15px;
+				margin-top: 1px;
 			}
 		}
 	}
